# opengl_futuristic

./: CMakeLists.txt  README.md
final/: MyBot.cpp  animatedModel.cpp  animatedModel.h  asset.cpp  asset.h  baseObject.cpp  baseObject.h  chunkLoader.cpp  chunkLoader.h  cube.cpp  cube.h  ground.cpp  ground.h  instance.h  light.cpp  lighting.cpp  lighting.h  main.cpp  skybox.cpp  skybox.h  texture.cpp  texture.h
final/assets/car2/: license.txt  scene.gltf
final/assets/car3/: license.txt  scene.gltf
final/shader/: asset.frag  asset.vert  bot.vert  cube.frag  depth.vert  ground.frag  ground.vert
lab4/: asset.cpp  asset.h  cube.cpp  cube.h  ground.cpp  ground.h  lab4_character.cpp  lab4_skeleton.cpp  light.cpp  light.h  lighting.cpp  lighting.h  model.cpp  model.h  skybox.cpp  skybox.frag  skybox.h  texture.cpp
lab4/assets/theta_class_shuttle/: license.txt  shuttle.gltf
lab4/shader/: asset.frag  asset.vert  bot.frag  bot.vert  cube.frag  cube.vert  depth.frag  depth.vert  skybox.frag  skybox.vert
